# load-test-es

./: .gitignore  Cargo.toml  README.md  ntd.txt
src/: config.json  config.rs  main.rs  read_json.rs
src/data/: a.json  z.json
