[package]
name = "files"
version = "0.1.0"
authors = ["saiumesh-letznav <35692863+saiumesh-letznav@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.40"
serde = { version = "1.0.94", features = ["derive"] }
reqwest = "0.9.18"
rayon = "1.1.0"